[package]
name = "nonminmax"
version = "0.1.2"
authors = ["stijn"]
edition = "2018"
license = "MIT"
repository = "https://github.com/stijnh/nonminmax"
homepage = "https://github.com/stijnh/nonminmax"
description = "Primitives types which cannot be their minimum/maximum value."
readme = "README.md"
documentation= "https://docs.rs/crate/nonminmax"


[dependencies]
